# Python_Toolkit_HPR_Detection

./: .gitignore  README.md  ToolkitDetectionHPR.py  pyproject.toml
example_notebooks/: Categorise_grasslands_KB20.ipynb  Categorise_grasslands_all.ipynb  DetectionMicrorelief_ExampleGrassland.ipynb  LineSegmentDetection_ExampleLandplot.ipynb
example_notebooks/data/: Example_Landplot.gpkg
hpr_detection_toolkit/: __init__.py  config_default.yaml  hpr_detection.py  line_detection.py  utils.py
